syntax = "proto3";
package prodvana.events;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/events";

import "google/protobuf/timestamp.proto";
import "prodvana/events/types.proto";

message Event {
    string id = 1;
    EventType type = 2;
    string title = 3;
    EventDetails details = 4;
    google.protobuf.Timestamp timestamp = 5;
    RelatedObjects related_objects = 6;
    string actor = 7;
}

message RelatedObjects {
    string application_id = 1;
    string service_id = 2;
    string release_channel_id = 3;
    string desired_state_id = 4;
    string root_desired_state_id = 5;
    string runtime_id = 6;
    map<string, string> external_logs = 7;
}
